# nomen

./: .gitignore  .unisonignore  AUDIT-REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  obsidian
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 95vnqqczyiqz1iyfjysc3x595hv0zy2l-source  kdgwqp4mgjnjly9wdjy8z99vn5d3v6ww-source
crates/nomen-api/: Cargo.toml
crates/nomen-api/src/: dispatch.rs  lib.rs  session_backend.rs  types.rs
crates/nomen-api/src/operations/: entity.rs  group.rs  identity.rs  maintenance.rs  memory.rs  message.rs  mod.rs
crates/nomen-core/: Cargo.toml
crates/nomen-core/src/: access.rs  collected.rs  config.rs  embed.rs  entities.rs  groups.rs  ingest.rs  kinds.rs  lib.rs  memory.rs  ops.rs  search.rs  send.rs  session.rs  signer.rs
crates/nomen-core/src/api/: errors.rs  types.rs
crates/nomen-db/: Cargo.toml
crates/nomen-db/src/: collected.rs  entity.rs  graph.rs  groups.rs  lib.rs  memory.rs  message.rs  schema.rs  search.rs  search_engine.rs
crates/nomen-llm/: Cargo.toml
crates/nomen-llm/src/: cluster.rs  entities.rs  lib.rs  store.rs
crates/nomen-llm/src/consolidate/: grouping.rs  llm.rs  mod.rs  pipeline.rs  two_phase.rs  types.rs
crates/nomen-media/: Cargo.toml
crates/nomen-media/src/: lib.rs  local.rs
crates/nomen-relay/: Cargo.toml
crates/nomen-relay/src/: events.rs  lib.rs  send.rs  signer.rs
crates/nomen-transport/: Cargo.toml
crates/nomen-transport/src/: cvm.rs  http.rs  lib.rs  mcp.rs  socket.rs
crates/nomen-wire/: Cargo.toml
crates/nomen-wire/src/: client.rs  codec.rs  lib.rs
docs/: README.md  api-reference.md  api-spec.md  api-v2-spec.md  architecture.md  audit-2026-03-11.md  audit-report.md  circle-encryption-impl.md  collected-messages.md  consolidation-spec.md  cvm-sdk-migration.md  dtag-v3-spec.md  future-enhancements.md  graph-and-consolidation-roadmap.md  implementation-plan.md  memory-consolidation.md  memory-simplification-spec.md  memory-tiers.md  migration.md  multi-user-identity-spec.md  nostr-memory-spec.md  presentation.html  raw-source-event-spec.md  room-context-spec.md  unification-plan.md  zeroclaw-integration-spec.md
docs/design/: circles.md  dreaming.md  filesystem.md
docs/rfc/: discovery-trust-indexing.md
docs/spec/: api.md  consolidation.md  data-model.md  filesystem.md  identity.md  overview.md  security.md  transport.md
examples/: cvm_smoke_test.rs
nomen-wire/src/: client.rs  lib.rs  types.rs
openclaw/: index.ts  openclaw.plugin.json  package.json
scripts/: cvm-smoke-test.sh  manual-verify.sh  migrate-dtag-v3.sh
src/: access.rs  api.rs  auth.rs  cluster.rs  config.rs  consolidate.rs  contextvm.rs  cvm.rs  db.rs  display.rs  embed.rs  entities.rs  fs.rs  groups.rs  http.rs  ingest.rs  kinds.rs  lib.rs  main.rs  mcp.rs  memory.rs  migrate.rs  nomen_admin.rs  nomen_backend.rs  nomen_consolidate.rs  nomen_memory.rs  nomen_message.rs  nomen_sync.rs  relay.rs  search.rs  send.rs  session.rs  signer.rs  snowclaw_adapter.rs  socket.rs  tools.rs
src/api/: dispatch.rs  errors.rs  mod.rs  types.rs
src/api/operations/: entity.rs  group.rs  maintenance.rs  memory.rs  message.rs  mod.rs  room.rs
src/cli/: admin.rs  fs.rs  group.rs  helpers.rs  memory.rs  message.rs  migrate.rs  mod.rs  server.rs  service.rs  sync.rs
src/consolidate/: grouping.rs  llm.rs  pipeline.rs  two_phase.rs  types.rs
src/db/: embed.rs  entity.rs  graph.rs  memory.rs  message.rs  meta.rs  mod.rs  schema.rs  search.rs
tests/: api.rs  api_v2.rs  conformance.rs  contextvm.rs  integration.rs  socket.rs
web/: index.html  landing.html  package-lock.json  package.json  vite.config.ts  vite.landing.config.ts
web/dist-landing/: index.html  obs.html
web/dist-landing/assets/: landing-2QAdXjAO.js  landing-BFDYpjWk.css  landing-BJyL8-mf.css  landing-CWZtE0d4.js  landing-D3lMjbT1.css  landing-DOF8LumR.css  landing-DooqsUwW.js  landing-Dx4YuMKy.js
web/src/: App.svelte  LandingApp.svelte  app.css  landing-main.ts
web/src/components/: GroupMembers.svelte  GroupTree.svelte  Layout.svelte  LoginModal.svelte  MemoryCard.svelte  MessageItem.svelte  ParticleBackground.svelte  ProfileButton.svelte  ProfileCard.svelte  ProfileList.svelte  ProfileModal.svelte  SearchResult.svelte  Sidebar.svelte  TierBadge.svelte  Toasts.svelte
web/src/lib/: api.ts  dtag.ts  mock.ts  nostr.ts  particle-network.ts  relay.ts  stores.ts
web/src/lib/__tests__/: particle-network.test.ts
web/src/pages/: Agents.svelte  Events.svelte  Groups.svelte  Landing.svelte  Members.svelte  Memories.svelte  Messages.svelte  Search.svelte  Settings.svelte
web/src/styles/: theme.css
web/tests/: relay.test.ts
