[package]
name = "nomen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Nostr-native memory system CLI and library"

[lib]
name = "nomen"
path = "src/lib.rs"

[[bin]]
name = "nomen"
path = "src/main.rs"

[features]
default = []
migrate = ["rusqlite"]
snowclaw = ["snow-memory"]

[dependencies]
# Nostr
nostr-sdk = { version = "0.39", features = ["nip44"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
hex = "0.4"

# Time formatting
chrono = "0.4"

# Terminal output
colored = "2"

# Config
toml = "0.8"
dirs = "5"

# Database
surrealdb = { version = "2", features = ["kv-surrealkv"] }

# HTTP client (for embedding API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async trait support
async-trait = "0.1"

# SQLite migration (optional)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

# Snowclaw collective memory types (optional)
snow-memory = { path = "../snowclaw/crates/snow-memory", optional = true }

[dev-dependencies]
tempfile = "3"
