[workspace]
members = [".", "crates/nomen-wire", "crates/nomen-core", "crates/nomen-db", "crates/nomen-relay", "crates/nomen-llm", "crates/nomen-api", "crates/nomen-transport", "crates/nomen-media"]

[package]
name = "nomen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Nostr-native memory system CLI and library"

[lib]
name = "nomen"
path = "src/lib.rs"

[[bin]]
name = "nomen"
path = "src/main.rs"

[features]
default = []
migrate = ["rusqlite"]

[dependencies]
# Nostr
nostr-sdk = { version = "0.43", features = ["nip44", "nip59"] }
contextvm-sdk = { git = "https://github.com/k0sti/rust-contextvm-sdk", branch = "main" }

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
hex = "0.4"

# Time formatting
chrono = "0.4"

# Terminal output
colored = "2"
dialoguer = "0.11"

# Filesystem watching
notify = "7"

# Config
toml = "0.8"
dirs = "5"

# Database
surrealdb = { version = "3", features = ["kv-surrealkv"] }

# HTTP client (for embedding API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async trait support
async-trait = "0.1"

# Core types (pure, no heavy deps)
nomen-core = { path = "crates/nomen-core" }

# Database layer (SurrealDB operations)
nomen-db = { path = "crates/nomen-db" }

# Relay layer (Nostr relay management, event parsing, key signing)
nomen-relay = { path = "crates/nomen-relay" }

# LLM layer (embeddings, consolidation, entity extraction, cluster fusion)
nomen-llm = { path = "crates/nomen-llm" }

# Media storage (Blossom, etc.)
nomen-media = { path = "crates/nomen-media" }

# API layer (dispatch, operations, NomenBackend trait)
nomen-api = { path = "crates/nomen-api" }

# Transport layer (HTTP, socket, CVM, MCP servers)
nomen-transport = { path = "crates/nomen-transport" }

# Socket protocol
nomen-wire = { path = "crates/nomen-wire" }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec"] }

# SQLite migration (optional)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
rustls = { version = "0.23.37", features = ["ring"] }
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
