[package]
name = "nomen-api"
version = "0.1.0"
edition = "2021"

[dependencies]
nomen-core = { path = "../nomen-core" }
nomen-db = { path = "../nomen-db" }
nomen-llm = { path = "../nomen-llm" }
nomen-relay = { path = "../nomen-relay" }
anyhow = "1.0"
async-trait = "0.1"
nostr-sdk = { version = "0.43", features = ["nip44"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
