[package]
name = "nomen-api"
version = "0.1.0"
edition = "2021"

[dependencies]
nomen-core = { path = "../nomen-core" }
nomen-db = { path = "../nomen-db" }
nomen-llm = { path = "../nomen-llm" }
nomen-media = { path = "../nomen-media" }
nomen-relay = { path = "../nomen-relay" }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
nostr-sdk = { version = "0.43", features = ["nip44"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
serde_json = "1.0"
tracing = "0.1"
