[package]
name = "nomen-db"
version = "0.1.0"
edition = "2021"

[dependencies]
nomen-core = { path = "../nomen-core" }
surrealdb = { version = "3", features = ["kv-surrealkv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
dirs = "5"
