[package]
name = "nomen-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
nomen-core = { path = "../nomen-core" }
nomen-db = { path = "../nomen-db" }
nomen-relay = { path = "../nomen-relay" }
nostr-sdk = { version = "0.43", features = ["nip44"] }
surrealdb = { version = "3", features = ["kv-surrealkv"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = "0.4"
ulid = "1.2.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
