[package]
name = "nomen-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
nomen-core = { path = "../nomen-core" }
nomen-db = { path = "../nomen-db" }
nomen-api = { path = "../nomen-api" }
nomen-relay = { path = "../nomen-relay" }
nomen-wire = { path = "../nomen-wire" }

# Nostr (for CVM)
nostr-sdk = { version = "0.43", features = ["nip44"] }
contextvm-sdk = { git = "https://github.com/k0sti/rust-contextvm-sdk", branch = "main" }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Filesystem
dirs = "5"
