[package]
name = "nomen-wire"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Wire protocol types and client for Nomen socket communication"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
